# Trumpf-zadanie

./: CMakeLists.txt  Readme.md  Tresc_zadania.md
inc/: float_queue.h  logger.h
src/: float_queue.c  logger.c  main.c
tests/: CMakeLists.txt  queue_test.c
